// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packageDocument() outputs correct string (English) 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<package xmlns=\\"http://www.idpf.org/2007/opf\\" version=\\"3.0\\" unique-identifier=\\"pub-id\\">
<metadata xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\">
  <dc:language id=\\"pub-language\\">en</dc:language>
  <dc:identifier id=\\"pub-id\\">friends-library/9414033c-4b70-4b4b-8e48-fec037822173</dc:identifier>
  <dc:title id=\\"pub-title\\">Journal of George Fox</dc:title>
  <dc:creator id=\\"author\\">George Fox</dc:creator>
  <dc:publisher>The Friends Library</dc:publisher>
  <dc:subject>Quakers</dc:subject>
  <dc:subject>Religious Society of Friends</dc:subject>
  <dc:rights>Public domain in the USA.</dc:rights>
  <meta property=\\"file-as\\" refines=\\"#author\\">Fox, George</meta>
  <meta property=\\"dcterms:modified\\">2021-01-22T08:00:25Z</meta>
  
</metadata>
<manifest>
  <item id=\\"css\\" href=\\"style.css\\" media-type=\\"text/css\\"/>
  <item id=\\"nav\\" href=\\"nav.xhtml\\" media-type=\\"application/xhtml+xml\\" properties=\\"nav\\"/>
  <item id=\\"chapter-1\\" href=\\"chapter-1.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
  <item id=\\"half-title\\" href=\\"half-title.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
  <item id=\\"copyright\\" href=\\"copyright.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
</manifest>
<spine>
  <itemref idref=\\"half-title\\"/>
  <itemref idref=\\"copyright\\"/>
  <itemref idref=\\"chapter-1\\"/>
</spine>
</package>"
`;

exports[`packageDocument() outputs correct string (Spanish) 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<package xmlns=\\"http://www.idpf.org/2007/opf\\" version=\\"3.0\\" unique-identifier=\\"pub-id\\">
<metadata xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\">
  <dc:language id=\\"pub-language\\">es</dc:language>
  <dc:identifier id=\\"pub-id\\">friends-library/9414033c-4b70-4b4b-8e48-fec037822173</dc:identifier>
  <dc:title id=\\"pub-title\\">Journal of George Fox</dc:title>
  <dc:creator id=\\"author\\">George Fox</dc:creator>
  <dc:publisher>La Biblioteca de los Amigos</dc:publisher>
  <dc:subject>Cuáqueros</dc:subject>
  <dc:subject>La Sociedad de Amigos (Cuáqueros)</dc:subject>
  <dc:rights>Dominio público en los Estados Unidos de América.</dc:rights>
  <meta property=\\"file-as\\" refines=\\"#author\\">Fox, George</meta>
  <meta property=\\"dcterms:modified\\">2021-01-22T08:00:25Z</meta>
  
</metadata>
<manifest>
  <item id=\\"css\\" href=\\"style.css\\" media-type=\\"text/css\\"/>
  <item id=\\"nav\\" href=\\"nav.xhtml\\" media-type=\\"application/xhtml+xml\\" properties=\\"nav\\"/>
  <item id=\\"chapter-1\\" href=\\"chapter-1.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
  <item id=\\"half-title\\" href=\\"half-title.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
  <item id=\\"copyright\\" href=\\"copyright.xhtml\\" media-type=\\"application/xhtml+xml\\"/>
</manifest>
<spine>
  <itemref idref=\\"half-title\\"/>
  <itemref idref=\\"copyright\\"/>
  <itemref idref=\\"chapter-1\\"/>
</spine>
</package>"
`;
